# ynab-status

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ynab-uv-cron.yml
app/: config.py  domain.py  helpers.py  mailer.py  main.py  report.py  ynab_client.py
